[package]
name = "cwaa-rs"
version = "0.1.0"
edition = "2018"
author = ["zakarouf <zak.d.official@gmail.com>"]
readme = "README.md"
repository = "https://github.com/zakarouf/cwaa-rs"
license = "CC0 1.0 Universal"
licence-file = "LICENSE"
keyword = ["text-reader", "cat"]
categories = ["command-line-utilities"]
description = "A Small Text Reader"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "~2.33.3"
rand = "0.8.4"
